compile to dist folder

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "author": "radzserg@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "rsdi": "^2.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
